@@ -1,5 +1,20 @@
-@comment $NetBSD: PLIST,v 1.6 2007/04/12 09:55:19 martti Exp $
+@comment $NetBSD: PLIST,v 1.7 2009/09/16 02:25:35 reed Exp $
 lib/xfce4/panel-plugins/libdatetime.la
+share/locale/ar/LC_MESSAGES/xfce4-datetime-plugin.mo
+share/locale/da/LC_MESSAGES/xfce4-datetime-plugin.mo
+share/locale/el/LC_MESSAGES/xfce4-datetime-plugin.mo
+share/locale/en_GB/LC_MESSAGES/xfce4-datetime-plugin.mo
+share/locale/es/LC_MESSAGES/xfce4-datetime-plugin.mo
+share/locale/eu/LC_MESSAGES/xfce4-datetime-plugin.mo
+share/locale/fr/LC_MESSAGES/xfce4-datetime-plugin.mo
+share/locale/gl/LC_MESSAGES/xfce4-datetime-plugin.mo
 share/locale/hu/LC_MESSAGES/xfce4-datetime-plugin.mo
+share/locale/ja/LC_MESSAGES/xfce4-datetime-plugin.mo
+share/locale/lv/LC_MESSAGES/xfce4-datetime-plugin.mo
 share/locale/nl/LC_MESSAGES/xfce4-datetime-plugin.mo
+share/locale/pt_BR/LC_MESSAGES/xfce4-datetime-plugin.mo
+share/locale/pt_PT/LC_MESSAGES/xfce4-datetime-plugin.mo
+share/locale/tr/LC_MESSAGES/xfce4-datetime-plugin.mo
+share/locale/uk/LC_MESSAGES/xfce4-datetime-plugin.mo
+share/locale/ur/LC_MESSAGES/xfce4-datetime-plugin.mo
 share/xfce4/panel-plugins/datetime.desktop
